--- a/InquiryPage.html
+++ b/InquiryPage.html
@@ -504,6 +504,33 @@
       <div class="videoContainer">
 
         <div class="videos" id="displayVideo">
+          <!-- HIDDEN INTERNAL CODES -->
+          <div class="thumbnail" onclick="OnlineReg.showModal()">
+            <img src="assets/images/EP-Thumbnail.jpg" alt="" /> 
+            <div class="content">
+              <h1>
+               Online Registration
+              </h1>
+              <p ">
+                <span>Play Video</span>
+                <i class="material-icons">play_circle_outline</i>
+              </p>
+            </div>
+          </div>  
+          <div class="thumbnail" onclick="EnrollmenProcess.showModal()">
+            <img src="assets/images/EP-Thumbnail.jpg" alt="" /> 
+            <div class="content">
+              <h1>
+                Enrollment Process
+              </h1>
+              <p ">
+                <span>Play Video</span>
+                <i class="material-icons">play_circle_outline</i>
+              </p>
+            </div>
+          </div>
+          <!-- HIDDEN INTERNAL CODES -->
+
         </div>
         <div class="seeAllbtn">
           <button onclick="SeeMoreSection.showModal()">See All</button>
@@ -561,7 +588,7 @@
 
 
 
-    getdata();
+    // getdata();
   </script>
 </body>
 
