--- a/InquiryPage.html
+++ b/InquiryPage.html
@@ -517,7 +517,7 @@
               </p>
             </div>
           </div>  
-          <div class="thumbnail" onclick="EnrollmenProcess.showModal()">
+          <div clagitss="thumbnail" onclick="EnrollmenProcess.showModal()">
             <img src="assets/images/EP-Thumbnail.jpg" alt="" /> 
             <div class="content">
               <h1>
