--- a/InquiryPage.html
+++ b/InquiryPage.html
@@ -502,28 +502,27 @@
     <div class="videoLibray">
       <h3>Other Video Tutorial</h3>
       <div class="videoContainer">
-
         <div class="videos" id="displayVideo">
           <!-- HIDDEN INTERNAL CODES -->
-          <div class="thumbnail" onclick="OnlineReg.showModal()">
-            <img src="assets/images/EP-Thumbnail.jpg" alt="" /> 
+          <div class="thumbnail" onclick="OnlineReg.showModal()">   
+            <img src="assets/images/OR-Thumbnail.png" alt="" /> 
             <div class="content">
               <h1>
                Online Registration
               </h1>
-              <p ">
+              <p>
                 <span>Play Video</span>
                 <i class="material-icons">play_circle_outline</i>
               </p>
             </div>
           </div>  
-          <div clagitss="thumbnail" onclick="EnrollmenProcess.showModal()">
+          <div class="thumbnail" onclick="EnrollmenProcess.showModal()">
             <img src="assets/images/EP-Thumbnail.jpg" alt="" /> 
             <div class="content">
               <h1>
                 Enrollment Process
               </h1>
-              <p ">
+              <p>
                 <span>Play Video</span>
                 <i class="material-icons">play_circle_outline</i>
               </p>
