--- a/InquiryPage.html
+++ b/InquiryPage.html
@@ -393,7 +393,7 @@
             explicabo error voluptate quibusdam vel facere nulla porro odio
             maxime. Velit accusantium fugiat eos.
           </p>
-          <button onclick="EnrollmenProcess.showModal()">
+          <button onclick="Forms.showModal()">
             View<i class="material-icons">remove_red_eye</i>
           </button>
         </div>
@@ -413,6 +413,7 @@
         <button onclick="VideoPlayer.close()">close</button>
       </div>
     </dialog>
+
     <dialog id="EnrollmenProcess">
       <div class="contentplayer" id="Player">
         <h1>Enrollment Process</h1>
@@ -440,6 +441,21 @@
           placeat magni modi. Est!
         </p>
         <button onclick="OnlineReg.close()">close</button>
+      </div>
+    </dialog>
+
+    <dialog id="Forms">
+      <div class="contentplayer">
+        <h1>Online Registration</h1>
+        <img src="" alt="">
+      
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+          distinctio accusantium, quam molestiae veniam dicta aliquam odio
+          optio, aspernatur libero assumenda veritatis fugit a itaque ea
+          placeat magni modi. Est!
+        </p>
+        <button onclick="Forms.close()">close</button>
       </div>
     </dialog>
 
