--- a/InquiryPage.html
+++ b/InquiryPage.html
@@ -185,9 +185,8 @@
 
       .seeAllbtn {
         display: flex;
-        justify-content: ;
+        justify-content: center;
         align-items: center;
-
         button {
           color: white;
           outline: 1px solid white;
