--- a/Documentation.html
+++ b/Documentation.html
@@ -4,56 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/fulldoc.css" />
     <title>Full Guide</title>
   </head>
-  <style>
-    *{
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-    }
-    main{
-        .greet{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-image: linear-gradient(to left, rgb(234, 234, 234), rgb(229, 234, 253)); 
-            .greetContents{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                h1{
-                    font-size: 100px;
-                }
-                p{
-                    text-align: center;
-                    font-size: 20px;
-                    width: 800px;
-                }
-                .homeBtns{
-                    margin: 20px;
-                    button{
-                        border: none;
-                        box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.209);
-                        border-radius: 10px;
-                        background-color: skyblue;
-                        margin: 0px 10px;
-                        width: 200px;
-                        padding: 20px;
-                    }
-                }
-            }
-        }
-        .offeredProgram{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-    }
-  </style>
   <body>
     <main>
       <div class="greet">
@@ -70,9 +23,100 @@
           </div>
         </div>
       </div>
+
       <div class="offeredProgram">
         <h1>PROGRAM OFFERINGS</h1>
+        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill="#E8DAFF"
+            d="M31,-49.9C42.3,-47.1,55.2,-43.2,61.8,-34.7C68.5,-26.2,69,-13.1,65,-2.3C61,8.4,52.4,16.9,48.7,30.5C45,44.2,46.2,63.1,38.8,67.9C31.5,72.7,15.8,63.4,1.4,61C-13.1,58.7,-26.1,63.3,-36.2,60.1C-46.3,56.9,-53.4,45.9,-63.1,34.6C-72.7,23.3,-84.9,11.7,-87.9,-1.7C-91,-15.2,-84.9,-30.3,-76.1,-43.2C-67.4,-56.1,-56,-66.7,-42.9,-68.5C-29.8,-70.3,-14.9,-63.3,-2.5,-58.9C9.8,-54.5,19.6,-52.8,31,-49.9Z"
+            transform="translate(100 100)"
+          />
+        </svg>
+        <div class="programContainer">
+          <div class="contentCard">
+            <h3>3-Year Diploma Courses</h3>
+            <p>
+              Pursuant to Executive Order No. 83 Series of 2012 also known as
+              the Philippine Qualifications Framework (PQF), the Center is now
+              piloting 3-Year Diploma programs in Level 5 category (based on PQF
+              8-Level Descriptors) considering RTC-KorPhil Davao as the Center
+              of Excellence for TVET in Mindanao.
+            </p>
+            <button>
+              <a href="https://enroll.korphildavao.site/register">Continue</a>
+            </button>
+          </div>
+          <div class="contentCard">
+            <h3>Short-Term / Skills Upgrading Programs</h3>
+            <p>
+              Courses designed to accommodate workers, for life-long training,
+              and for those who did not avail the 3-Year Diploma programs.
+              Qualifications (courses with TESDA Training Regulations or TR) in
+              diploma programs are also offered individually in separate
+              schedules.
+            </p>
+            <button>
+              <a href="https://enroll.korphildavao.site/register">Continue</a>
+            </button>
+          </div>
+          <div class="contentCard">
+            <h3>Community-Based Skills Training</h3>
+            <p>
+              In cooperation with Community Leaders (like political, church, or
+              organization leaders) skills trainings are brought to the
+              community to reach out the grassroots. Venues and schedules are
+              depending on the stipulations in the Memorandum of Agreement (MOA)
+              between the Center & the sponsoring partner.
+            </p>
+            <button>
+              <a href="https://enroll.korphildavao.site/register">Continue</a>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="enrollmentforms">
+        <h1>How to Inquire? </h1>
       </div>
     </main>
+    <script>
+      let mediafiles = [];
+      let documents = [];
+
+      async function getmedia() {
+        // let searchstr = searchInput.value;
+        let response = await fetch(
+          `http://localhost/rtc.kiosk/api/media.php?action=read`
+        );
+        mediafiles = await response.json();
+        rendermedia();
+        getDocs();
+      }
+      async function getDocs() {
+        // let searchstr = searchInput.value;
+        let response = await fetch(
+          `http://localhost/rtc.kiosk/api/docs.php?action=read`
+        );
+        documents = await response.json();
+        rendermedia();
+      }
+      function rendermedia() {
+        formsView.innerHTML = ``;
+        for (const document of documents) {
+          formsView.innerHTML += `
+          <div class="formContainer">
+              <div class="formImage">
+                <img src="${document.front}" alt="">
+                <img src="${document.back}" alt="">
+              </div>
+              <h4>${document.fileName}</h4>
+            </div>
+              `;
+        }
+      }
+
+      getmedia();
+    </script>
   </body>
 </html>
