--- a/Documentation.html
+++ b/Documentation.html
@@ -77,7 +77,12 @@
       </div>
 
       <div class="enrollmentforms">
-        <h1>How to Inquire? </h1>
+        <div class="leftContents">
+          <h1>Step-by-Step <br>Enrollment Guide</h1>
+        </div>
+        <div class="rightcontent">
+          <img src="assets/images/Videotutorial.png" alt="">
+        </div>
       </div>
     </main>
     <script>
