--- a/Homepage.html
+++ b/Homepage.html
@@ -223,6 +223,7 @@
 
             img {
               height: 60px;
+              margin-bottom: 15px;
             }
 
             p {
@@ -416,23 +417,25 @@
           <h1>12:12 PM</h1>
           <p>Friday, September 8, 2023</p>
         </div>
-        <div class="btn">
-          <img src="assets/images/Icons/WhatsNew.png" alt="" />
-          <p>What's New?</p>
-        </div>
+        <a href="Documentation.html">
+          <div class="btn">
+            <img src="assets/images/Icons/catalog-magazine.svg" alt="" />
+            <p>Get Started</p>
+          </div>
+        </a>
         <a href="InquiryPage.html   ">
           <div class="btn">
-            <img src="assets/images/Icons/Inquire.png" alt="" />
+            <img src="assets/images/Icons/student-alt.svg" alt="" />
             <p>Inquiries</p>
           </div>
         </a>
         <div class="btn" onclick="registerModal.showModal()">
-          <img src="assets/images/Icons/Register.png" alt="" />
+          <img src="assets/images/Icons/clipboard-list.svg" alt="" />
           <p>Register</p>
         </div>
 
         <div class="btn" onclick="feedBackForm.showModal()">
-          <img src="assets/images/Icons/Feedback.png" alt="" />
+          <img src="assets/images/Icons/feedback-alt.svg" alt="" />
           <p>Feed back</p>
         </div>
       </div>
