--- a/InquiryPage.html
+++ b/InquiryPage.html
@@ -409,7 +409,10 @@
           optio, aspernatur libero assumenda veritatis fugit a itaque ea
           placeat magni modi. Est!
         </p>
-        <button onclick="EPkey.close()">close</button>
+        <div class="formsBtn">
+          <button onclick="EPkey.close()">close</button>
+          <a href="Documentation.html"><button>Full Documentation</button></a>
+        </div>
       </div>
     </dialog>
 
@@ -424,7 +427,10 @@
           optio, aspernatur libero assumenda veritatis fugit a itaque ea
           placeat magni modi. Est!
         </p>
-        <button onclick="ORkey.close()">close</button>
+        <div class="formsBtn">
+          <button onclick="ORkey.close()">close</button>
+          <a href="Documentation.html"><button>Full Documentation</button></a>
+        </div>
       </div>
     </dialog>
 
