--- a/Documentation.html
+++ b/Documentation.html
@@ -13,13 +13,13 @@
       <div class="sidebtns">
         <a href="#greet"><button>Introduction</button></a>
         <a href="#offeredProgram"><button>Programm Offers</button></a>
-        <a href="#enrollmentforms"><button>Where to GO?</button></a>
+        <a href="#enrollmentforms"><button>How to Inquire?</button></a>
         <a href="#forms"><button>Enrollment Process</button></a>
-        <button>3-Year Diploma Courses</button>
-        <button>Short-Term</button>
-        <button>Community-Based Skills Training</button>
-        <button>Contact and Support</button>
-        <button>Feedback and Suggestions</button>
+        <a href="#diploma"><button>3-Year Diploma Courses</button></a>
+        <a href="#shortTerm"><button>Short-Term</button></a>
+       <a href="#communityBased"><button>Community-Based Skills Training</button></a>
+        <a href="#contact"><button>Contact and Support</button></a>
+        <a href="#feedBack"><button>Feedback and Suggestions</button></a>
       </div>
     </div>
     <main>
@@ -117,10 +117,21 @@
             <div class="details">
               <h1>Admin Building</h1>
               <p>
-                Once you arrive at the Korphil Davao campus, your first step will be to locate the Admin Building. This is where the administrative offices are housed, and it's your key starting point for the enrollment process. If you're unfamiliar with the campus, feel free to ask for directions from any staff or students you encounter—they’ll be happy to guide you.
+                Once you arrive at the Korphil Davao campus, your first step
+                will be to locate the Admin Building. This is where the
+                administrative offices are housed, and it's your key starting
+                point for the enrollment process. If you're unfamiliar with the
+                campus, feel free to ask for directions from any staff or
+                students you encounter—they’ll be happy to guide you.
               </p>
               <p class="visayan">
-                "Pag-abot nimo sa Korphil Davao campus, ang una nimo buhaton mao ang pagpangita sa Admin Building. Dinhi makita ang mga opisina sa administrasyon, ug kini ang imung unang lakang alang sa enrollment process. Kung wala kay klaro nga ideya sa lugar, pwede ka mangutana sa mga empleyado o estudyante nga imong makit-an para sa mga direksyon—sigurado nga andam sila mutabang nimo."
+                "Pag-abot nimo sa Korphil Davao campus, ang una nimo buhaton mao
+                ang pagpangita sa Admin Building. Dinhi makita ang mga opisina
+                sa administrasyon, ug kini ang imung unang lakang alang sa
+                enrollment process. Kung wala kay klaro nga ideya sa lugar,
+                pwede ka mangutana sa mga empleyado o estudyante nga imong
+                makit-an para sa mga direksyon—sigurado nga andam sila mutabang
+                nimo."
               </p>
             </div>
           </div>
@@ -133,10 +144,15 @@
               <div class="details">
                 <h1>Left Turn</h1>
                 <p>
-                  After entering the Admin Building, you will need to turn left to locate the Training Department. This department manages all aspects of training and student enrollments.
+                  After entering the Admin Building, you will need to turn left
+                  to locate the Training Department. This department manages all
+                  aspects of training and student enrollments.
                 </p>
                 <p class="visayan">
-                  "Pag-sulod nimo sa Admin Building, liko sa wala aron makit-an nimo ang Training Department. Ang departmento nga kini ang nagdumala sa tanan nga bahin sa training ug student enrollments."
+                  "Pag-sulod nimo sa Admin Building, liko sa wala aron makit-an
+                  nimo ang Training Department. Ang departmento nga kini ang
+                  nagdumala sa tanan nga bahin sa training ug student
+                  enrollments."
                 </p>
               </div>
             </div>
@@ -150,10 +166,18 @@
               <div class="details">
                 <h1>Hallway</h1>
                 <p>
-                  walk down the hallway and look for the second door on your right—this is the entrance to the Training Department. For your convenience, the names of each room are clearly displayed on signs located above the doors. Look for the sign that says "Training Department" to ensure you're in the right place.
+                  walk down the hallway and look for the second door on your
+                  right—this is the entrance to the Training Department. For
+                  your convenience, the names of each room are clearly displayed
+                  on signs located above the doors. Look for the sign that says
+                  "Training Department" to ensure you're in the right place.
                 </p>
                 <p class="visayan">
-                  "Paglakaw sa Hallway ug pangitaa ang ikaduhang pultahan sa imong tuo—mao kini ang Training Department. Para sa imong kaginhawaan, ang mga ngalan sa matag kwarto makita sa ibabaw nga bahin sa pultahan. Pangitaa ang ngalan nga "Training Department" aron masiguro nga naa ka sa sakto nga dapit."
+                  "Paglakaw sa Hallway ug pangitaa ang ikaduhang pultahan sa
+                  imong tuo—mao kini ang Training Department. Para sa imong
+                  kaginhawaan, ang mga ngalan sa matag kwarto makita sa ibabaw
+                  nga bahin sa pultahan. Pangitaa ang ngalan nga "Training
+                  Department" aron masiguro nga naa ka sa sakto nga dapit."
                 </p>
               </div>
             </div>
@@ -167,10 +191,16 @@
               <div class="details">
                 <h1>Training Department</h1>
                 <p>
-                  After entering the Training Department, approach the staff and ask for assistance with the enrollment process. They will guide you through the necessary steps, including any paperwork and requirements you need to fulfill.
+                  After entering the Training Department, approach the staff and
+                  ask for assistance with the enrollment process. They will
+                  guide you through the necessary steps, including any paperwork
+                  and requirements you need to fulfill.
                 </p>
                 <p class="visayan">
-                  "Pag-sulod nimo sa Training Department, duola ang mga staff ug pangutana bahin sa enrollment process. I-guide ka nila sa mga kinahanglan buhaton, lakip na ang mga papeles ug mga requirements nga kinahanglan nimo kumplituhon."
+                  "Pag-sulod nimo sa Training Department, duola ang mga staff ug
+                  pangutana bahin sa enrollment process. I-guide ka nila sa mga
+                  kinahanglan buhaton, lakip na ang mga papeles ug mga
+                  requirements nga kinahanglan nimo kumplituhon."
                 </p>
               </div>
             </div>
@@ -200,6 +230,27 @@
           </div>
         </div>
       </section>
+
+      <section class="diploma" id="diploma">
+        <h1>3-Year Diploma Courses</h1>
+      </section>
+
+      <section class="shortTerm">
+        <h1>Short-Term/Skills Upgrading Programs</h1>
+      </section>
+
+      <section class="communityBased">
+        <h1>Community-Based Skills Training</h1>
+      </section>
+
+      <section class="contact">
+        <h1>Contact and Support</h1>
+      </section>
+
+      <section class="feedBack">
+        <h1>Feedback and Suggestions</h1>
+      </section>
+
     </main>
     <script>
       let mediafiles = [];
@@ -238,10 +289,6 @@
               `;
         }
       }
-
-      function scrollPage(sectionId) {
-    const section = sectionId;
-}
 
       getmedia();
     </script>
