--- a/Documentation.html
+++ b/Documentation.html
@@ -9,20 +9,18 @@
   </head>
 
   <body>
-    <div class="bodyContainer">
+
     <div class="sideBar">
       <div class="sidebtns">
-        <a href="#greet"><button>Introduction</button></a>
-        <a href="#offeredProgram"><button>Programm Offers</button></a>
-        <a href="#enrollmentforms"><button>How to Inquire?</button></a>
-        <a href="#forms"><button>Enrollment Process</button></a>
-        <a href="#diploma"><button>3-Year Diploma Courses</button></a>
-        <a href="#shortTerm"><button>Short-Term</button></a>
-        <a href="#communityBased"
-          ><button>Community-Based Skills Training</button></a
-        >
-        <a href="#contact"><button>Contact and Support</button></a>
-        <a href="#feedBack"><button>Feedback and Suggestions</button></a>
+        <a href="#greet" id="activebtn"><img src="assets/images/Icons/house-chimney.svg" alt=""></a>
+        <a href="#offeredProgram" id="activebtn"><img src="assets/images/Icons/heart-partner-handshake.svg" alt=""></a>
+        <a href="#enrollmentforms" id="activebtn"><img src="assets/images/Icons/comment-question.svg" alt=""></a>
+        <a href="#forms" id="activebtn"><img src="assets/images/Icons/file-signature.svg" alt=""></a>
+        <a href="#diploma" id="activebtn"><img src="assets/images/Icons/diploma.svg" alt=""></a>
+        <a href="#shortTerm" id="activebtn"><img src="assets/images/Icons/user-skill-gear.svg" alt=""></a>
+        <a href="#communityBased"  id="activebtn"><img src="assets/images/Icons/skill-alt.svg" alt=""></a>
+        <a href="#contact"  id="activebtn"><img src="assets/images/Icons/customer-service.svg" alt=""></a>
+        <a href="#feedBack"  id="activebtn"><img src="assets/images/Icons/feedback-review.svg" alt=""></a>
       </div>
     </div>
     <main>
@@ -254,7 +252,7 @@
         <h1>Feedback and Suggestions</h1>
       </section>
     </main>
-  </div>
+
     <script>
       let mediafiles = [];
       let documents = [];
