--- a/Documentation.html
+++ b/Documentation.html
@@ -207,6 +207,11 @@
             </div>
           </div>
         </div>
+        <div class="startTour">
+          <img src="assets/images/Icons/route.svg" alt=""> 
+          <p>We would like to acknowledge and extend our gratitude to the DIT Batch 3 Team for their invaluable contributions to this project. Their research work on the <i>Virtual Campus Tour</i> has greatly inspired and informed our current initiative, allowing us to build upon their innovative ideas and enhance the user experience. Their efforts have provided a solid foundation for our ongoing development.</p>
+          <a href="https://korphil360.ditweb.net/"><h3>Start Virtual Tour</h3></a>
+        </div>
       </section>
 
       <section class="forms" id="forms">
