--- a/Documentation.html
+++ b/Documentation.html
@@ -4,23 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="assets/style.css" /> -->
-    <link rel="stylesheet" href="assets/fulldoc.css"/>
+    <link rel="stylesheet" href="assets/fulldoc.css" />
     <title>Full Guide</title>
   </head>
 
   <body>
-
     <div class="sideBar">
       <div class="sidebtns">
-        <a href="#greet" id="activebtn"><img src="assets/images/Icons/house-chimney.svg" alt=""></a>
-        <a href="#offeredProgram" id="activebtn"><img src="assets/images/Icons/heart-partner-handshake.svg" alt=""></a>
-        <a href="#enrollmentforms" id="activebtn"><img src="assets/images/Icons/comment-question.svg" alt=""></a>
-        <a href="#forms" id="activebtn"><img src="assets/images/Icons/file-signature.svg" alt=""></a>
-        <a href="#diploma" id="activebtn"><img src="assets/images/Icons/diploma.svg" alt=""></a>
-        <a href="#shortTerm" id="activebtn"><img src="assets/images/Icons/user-skill-gear.svg" alt=""></a>
-        <a href="#communityBased"  id="activebtn"><img src="assets/images/Icons/skill-alt.svg" alt=""></a>
-        <a href="#contact"  id="activebtn"><img src="assets/images/Icons/customer-service.svg" alt=""></a>
-        <a href="#feedBack"  id="activebtn"><img src="assets/images/Icons/feedback-review.svg" alt=""></a>
+        <a href="#greet" id="activebtn"
+          ><img src="assets/images/Icons/house-chimney.svg" alt=""
+        /></a>
+        <a href="#offeredProgram" id="activebtn"
+          ><img src="assets/images/Icons/heart-partner-handshake.svg" alt=""
+        /></a>
+        <a href="#enrollmentforms" id="activebtn"
+          ><img src="assets/images/Icons/comment-question.svg" alt=""
+        /></a>
+        <a href="#forms" id="activebtn"
+          ><img src="assets/images/Icons/file-signature.svg" alt=""
+        /></a>
+        <a href="#diploma" id="activebtn"
+          ><img src="assets/images/Icons/diploma.svg" alt=""
+        /></a>
+        <a href="#shortTerm" id="activebtn"
+          ><img src="assets/images/Icons/user-skill-gear.svg" alt=""
+        /></a>
+        <a href="#communityBased" id="activebtn"
+          ><img src="assets/images/Icons/skill-alt.svg" alt=""
+        /></a>
+        <a href="#contact" id="activebtn"
+          ><img src="assets/images/Icons/customer-service.svg" alt=""
+        /></a>
+        <a href="#feedBack" id="activebtn"
+          ><img src="assets/images/Icons/feedback-review.svg" alt=""
+        /></a>
       </div>
     </div>
     <main>
@@ -208,31 +225,78 @@
           </div>
         </div>
         <div class="startTour">
-          <img src="assets/images/Icons/route.svg" alt=""> 
-          <p>We would like to acknowledge and extend our gratitude to the DIT Batch 3 Team for their invaluable contributions to this project. Their research work on the <i>Virtual Campus Tour</i> has greatly inspired and informed our current initiative, allowing us to build upon their innovative ideas and enhance the user experience. Their efforts have provided a solid foundation for our ongoing development.</p>
-          <a href="https://korphil360.ditweb.net/"><h3>Start Virtual Tour</h3></a>
+          <img src="assets/images/Icons/route.svg" alt="" />
+          <p>
+            We would like to acknowledge and extend our gratitude to the DIT
+            Batch 3 Team for their invaluable contributions to this project.
+            Their research work on the <i>Virtual Campus Tour</i> has greatly
+            inspired and informed our current initiative, allowing us to build
+            upon their innovative ideas and enhance the user experience. Their
+            efforts have provided a solid foundation for our ongoing
+            development.
+          </p>
+          <a href="https://korphil360.ditweb.net/"
+            ><h3>Start Virtual Tour</h3></a
+          >
         </div>
       </section>
 
       <section class="forms" id="forms">
-        <h1>Enrollment Process</h1>
-
-        <div class="formsContainer" id="formsContainer">
-          <div class="singleform">
-            <div class="formImages">
-              <img
-                class="front"
-                src="http://localhost/rtc.kiosk/assets/images/form/front/blue-front.png"
-                alt=""
-              />
-              <img
-                class="back"
-                src="http://localhost/rtc.kiosk/assets/images/form/back/blue-back.png"
-                alt=""
-              />
+        <div class="headForm">
+          <h1>Enrollment Process</h1>
+          <!-- <img src="assets/images/admin/AdminLounge.jpeg" alt=""> -->
+        </div>
+        <div class="formContents">
+          <div class="formsContainer" id="formsContainer">
+            <div class="singleform">
+              <div class="formImages">
+                <img
+                  class="front"
+                  src="http://localhost/rtc.kiosk/assets/images/form/front/blue-front.png"
+                  alt=""
+                />
+                <img
+                  class="back"
+                  src="http://localhost/rtc.kiosk/assets/images/form/back/blue-back.png"
+                  alt=""
+                />
+              </div>
+              <h2>Diploma Course</h2>
+              <h3 style="background-color: skyblue">Blue Form</h3>
             </div>
-            <h2>Diploma Course</h2>
-            <h3 style="background-color: skyblue">Blue Form</h3>
+          </div>
+          <div class="formDescription">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+              <path fill="#BAE6FF" d="M46.3,-64.1C59.6,-54.1,69.5,-40,77.1,-23.5C84.6,-6.9,89.7,11.9,84.6,27.4C79.5,42.9,64.1,55,48.3,65.2C32.5,75.4,16.2,83.7,1.3,81.9C-13.6,80.2,-27.3,68.2,-39.1,56.7C-50.9,45.2,-61,34.1,-64.7,21.3C-68.4,8.5,-65.7,-6,-63.5,-23C-61.2,-40,-59.2,-59.4,-48.7,-70.3C-38.2,-81.1,-19.1,-83.4,-1.3,-81.6C16.5,-79.8,33.1,-74,46.3,-64.1Z" transform="translate(100 100)" />
+            </svg>
+            <p></p>
+            <div class="frontContent">
+              
+              <img src="assets/images/form/front/pink-front.png" alt="" />
+              <div class="txt">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolore perferendis ratione porro similique animi adipisci
+                  dolor deleniti numquam facilis consectetur! Aut quis laborum
+                  aperiam. Magni nisi reiciendis voluptatum dolorem ipsa.
+                </p>
+                
+              </div>
+            </div>
+            <div class="backContent">
+              <img src="assets/images/form/back/pink-back.png" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+                perferendis ratione porro similique animi adipisci dolor
+                deleniti numquam facilis consectetur! Aut quis laborum aperiam.
+                Magni nisi reiciendis voluptatum dolorem ipsa.
+              </p>
+            </div>
+          </div>
+          <div class="videoTutorial">
+            <h1>Step by Step</h1>
+            <iframe src="https://youtube.com/embed/dk4YijfVdJQ?autoplay=1">
+            </iframe>
           </div>
         </div>
       </section>
