--- a/Documentation.html
+++ b/Documentation.html
@@ -335,69 +335,82 @@
       </section>
 
       <section class="contact" id="contact">
-        <div class="head">
+        <!-- <div class="head">
           <h1>Contact and Support</h1>
-        </div>
+        </div> -->
         <div class="contentCards">
-
-       
-        <div class="callUs">
-          <h1 class="cardHeader"><img src="assets/images/Icons/circle-phone.svg" alt="">Call us On</h1>
-          <div class="details">
-            <div class="contactCard"> 
-              <h1>Admin / HR</h1>
-              <p>0968 875 2266</p>
-              <p>(082) 287 3691</p>
-              <p>Administrative Concerns</p>
-            </div>
-            <div class="contactCard">
-              <h1>Training Department</h1>
-              <p>0939 924 2092</p>
-              <p>Training Concerns</p>
-              <p>Scholarships</p>
-            </div>
-            <div class="contactCard">
-              <h1>Assessment Office</h1>
-              <p>0968 858 3041</p>
-              <p>Assessment Concerns</p>
-              <p>National Certificate Exams</p>
-            </div>
-            <div class="contactCard">
-              <h1>Registrar's Office</h1>
-              <p>0968 899 3626</p>
-              <p>Records Concerns</p>
-              <p>Entrance Examination</p>
-            </div>
-            <div class="contactCard">
-              <h1>Procurement Office</h1>
-              <p>0968 870 0829</p>
-              <p>(082) 287 3691</p>
-              <p>Procurement Concerns</p>
-            </div>
-          </div>
-        </div>
-        <div class="emailUS">
-          <h1 class="cardHeader"><img src="assets/images/Icons/circle-envelope.svg" alt="">Email us On</h1>
-          <div class="details">
-            <div class="EmailCard"> 
-              <h1>RTC-KorPhil Davao</h1>
-              <p>rtcdavaocity@tesda.gov.ph</p>
-            </div>
-            <div class="EmailCard">
-              <h1>Training Department</h1>
-              <p>rtckpvtctrainingdepartment@gmail.com</p>
-            </div>
-            <div class="EmailCard">
-              <h1>Assessment Office</h1>
-              <p>korphilcacs@gmail.com</p>
-            </div>
-            <div class="EmailCard">
-              <h1>Registrar's Office</h1>
-              <p>korphilregistrar@gmail.com</p>
+          <div class="callUs">
+            <h1 class="cardHeader">
+              <img src="assets/images/Icons/circle-phone.svg" alt="" />Call us
+              On
+            </h1>
+            <div class="details">
+              <div class="contactCard">
+                <h1>Admin / HR</h1>
+                <p>0968 875 2266</p>
+                <p>(082) 287 3691</p>
+                <p>Administrative Concerns</p>
+              </div>
+              <div class="contactCard">
+                <h1>Training Department</h1>
+                <p>0939 924 2092</p>
+                <p>Training Concerns</p>
+                <p>Scholarships</p>
+              </div>
+              <div class="contactCard">
+                <h1>Assessment Office</h1>
+                <p>0968 858 3041</p>
+                <p>Assessment Concerns</p>
+                <p>National Certificate Exams</p>
+              </div>
+              <div class="contactCard">
+                <h1>Registrar's Office</h1>
+                <p>0968 899 3626</p>
+                <p>Records Concerns</p>
+                <p>Entrance Examination</p>
+              </div>
+              <div class="contactCard">
+                <h1>Procurement Office</h1>
+                <p>0968 870 0829</p>
+                <p>(082) 287 3691</p>
+                <p>Procurement Concerns</p>
+              </div>
             </div>
           </div>
+          <div class="emailUS">
+            <h1 class="cardHeader">
+              <img src="assets/images/Icons/circle-envelope.svg" alt="" />Email
+              us On
+            </h1>
+            <div class="details">
+              <div class="EmailCard">
+                <h1>RTC-KorPhil Davao</h1>
+                <p>rtcdavaocity@tesda.gov.ph</p>
+              </div>
+              <div class="EmailCard">
+                <h1>Training Department</h1>
+                <p>rtckpvtctrainingdepartment@gmail.com</p>
+              </div>
+              <div class="EmailCard">
+                <h1>Assessment Office</h1>
+                <p>korphilcacs@gmail.com</p>
+              </div>
+              <div class="EmailCard">
+                <h1>Registrar's Office</h1>
+                <p>korphilregistrar@gmail.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="maps">
+            <iframe
+              class="frameMaps"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.24940338278!2d125.64079731103793!3d7.212364814744095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32f941f10cd7900b%3A0xda86f8f574e83300!2sTESDA%20XI%20Regional%20Training%20Center%20-%20Korea%20Philippines%20Vocational%20Training%20Center%2C%20Davao!5e0!3m2!1sen!2sph!4v1726746283739!5m2!1sen!2sph"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
-      </div>
       </section>
 
       <section class="feedBack" id="feedBack">
