--- a/Documentation.html
+++ b/Documentation.html
@@ -490,6 +490,7 @@
               </select>
             </div>
             <div class="instruction">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt earum, quidem laboriosam tempora autem rem consequatur minus quam laborum dignissimos itaque dolorem recusandae nostrum minima pariatur, tenetur provident quisquam. Asperiores.
               <p>
                 INSTRUCTION: <b>Select</b> your answer to the Citizen's Charter
                 (CC) questions. The Citizen's Charter is an official document
