--- a/Documentation.html
+++ b/Documentation.html
@@ -235,9 +235,9 @@
             efforts have provided a solid foundation for our ongoing
             development.
           </p>
-          <a href="https://korphil360.ditweb.net/"
-            ><h3>Start Virtual Tour</h3></a
-          >
+          <a href="https://korphil360.ditweb.net/">
+            <h3>Start Virtual Tour</h3>
+          </a>
         </div>
       </section>
 
@@ -324,6 +324,24 @@
 
       <section class="diploma" id="diploma">
         <h1>3-Year Diploma Courses</h1>
+        <div class="bodyCourse">
+          <iframe src="https://youtube.com/embed/fsin3bYlWWo?autoplay=1 ">
+          </iframe>
+          <div class="programdetails">
+            <div class="courseCard">
+              <h3>Diploma In information technology</h3>
+              <img
+                src="https://img.freepik.com/premium-photo/businessman-hand-using-laptop-computer-office_31965-2881.jpg"
+                alt=""
+              />
+                <p class="description">
+                  This diploma covers key IT skills, including programming,
+                  networking, and database management.
+                </p>
+            </div>
+    
+          </div>
+        </div>
       </section>
 
       <section class="shortTerm" id="shortTerm">
@@ -489,7 +507,7 @@
                 <option value="">Others</option>
               </select>
             </div>
-            <div class="instruction"> 
+            <div class="instruction">
               <p>
                 INSTRUCTION: <b>Select</b> your answer to the Citizen's Charter
                 (CC) questions. The Citizen's Charter is an official document
