--- a/Homepage.html
+++ b/Homepage.html
@@ -5,283 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="assets/style.css" />
-    <style>
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-      }
-
-      #registerModal {
-        margin: auto;
-        border: none;
-        border-radius: 15px;
-        width: 70%;
-        padding: 20px 10px;
-
-        .headmodal {
-          margin: auto;
-          width: 90%;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-
-          button {
-            margin: 5px 0px;
-
-            padding: 10px;
-            width: 100px;
-            background-color: rgb(207, 207, 207);
-            border: none;
-            border-radius: 5px;
-            transition: 0.5s;
-          }
-        }
-
-        .registerModal {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-wrap: wrap;
-
-          .contentCard {
-            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.151);
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            flex-direction: column;
-            border-radius: 10px;
-            padding: 10px;
-            background-color: rgb(242, 245, 255);
-            width: 320px;
-            height: 500px;
-            margin: 20px;
-
-            h3 {
-              width: 250px;
-            }
-
-            p {
-              width: 250px;
-            }
-
-            button {
-              margin: 5px 10px;
-              padding: 20px;
-              width: 200px;
-              background-color: navy;
-              border: none;
-              border-radius: 5px;
-              transition: 0.5s;
-
-              &:hover {
-                cursor: pointer;
-                scale: 1.01;
-              }
-
-              a {
-                text-decoration: none;
-                color: white;
-              }
-            }
-          }
-        }
-      }
-
-      #feedBackForm {
-        padding: 50px 30px;
-        border-radius: 10px;
-        border: none;
-
-        form {
-          display: grid;
-          gap: 10px;
-          grid-template-columns: auto auto auto;
-
-          h2 {
-            grid-column: 1 / span 2;
-          }
-
-          .closeBtn {
-            display: flex;
-            justify-content: right;
-            align-items: center;
-
-            button {
-              padding: 10px;
-              border: none;
-              border-radius: 5px;
-            }
-          }
-
-          input {
-            text-transform: uppercase;
-            width: 200px;
-            padding: 10px;
-            border-radius: 5px;
-          }
-
-          .satisfaction {
-            flex-direction: column;
-            display: flex;
-
-            select {
-              padding: 10px;
-              border-radius: 5px;
-            }
-          }
-
-          .feedBackbox {
-            flex-direction: column;
-            display: flex;
-            width: auto;
-            grid-column: 1 / span 3;
-
-            textarea {
-              background-color: rgb(234, 234, 234);
-              height: 100px;
-              resize: none;
-              padding: 10px;
-              border-radius: 5px;
-            }
-          }
-
-          .agreePolicy {
-            display: flex;
-            justify-self: center;
-            grid-column: 1 / span 3;
-
-            p {
-              width: 700px;
-              text-align: center;
-            }
-          }
-
-          .submitBtn {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            grid-column: 1 / span 3;
-
-            button {
-              color: white;
-              background-color: rgb(54, 54, 255);
-              border-radius: 5px;
-              border: none;
-              padding: 10px 100px;
-            }
-          }
-        }
-      }
-
-      main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 80vh;
-        .button-area {
-          display: grid;
-          grid-template-columns: auto auto auto;
-          gap: 15px;
-          a {
-            text-decoration: none;
-          }
-
-          .timeClock {
-            grid-column: 1 / span 2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            border-radius: 15px;
-            color: white;
-            background-color: navy;
-            box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.296);
-
-            h1 {
-              font-size: 70px;
-            }
-          }
-
-          .btn {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: 200px;
-            height: 200px;
-            border-radius: 15px;
-            color: navy;
-            background-color: rgb(255, 255, 255);
-            box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.296);
-            transition: 0.5s;
-
-            &:hover {
-              cursor: pointer;
-              scale: 0.95;
-            }
-
-            img {
-              height: 60px;
-              margin-bottom: 15px;
-            }
-
-            p {
-              font-size: 18px;
-            }
-          }
-        }
-
-        .roteteShape {
-          height: 100px;
-          width: 100px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          z-index: -1;
-          position: absolute;
-          
-          img {
-            z-index: -1;
-            position: absolute;
-            height: 650px;
-            animation: spin 5s linear infinite;
-          }
-        }
-        @keyframes spin {
-          from {
-            transform: rotate(0deg);
-          }
-          to {
-            transform: rotate(360deg);
-          }
-        }
-        
-
-
-        .leftContainer {
-          display: flex;
-          justify-content: center;
-          align-items: left;
-          flex-direction: column;
-          gap: 20px;
-
-          h1 {
-            margin: 0;
-            font-weight: 900;
-            font-size: 70px;
-            color: navy;
-            width: 700px;
-            line-height: 60px;
-          }
-
-          p {
-            margin-top: -15px;
-            width: 500px;
-          }
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="./assets/home.css">
   </head> 
   <body>
     <nav>
