--- a/Documentation.html
+++ b/Documentation.html
@@ -268,10 +268,7 @@
 
           <div class="formDescription">
             <p class="note">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Provident, ex non nihil ratione sequi adipisci? Vero minus in,
-              molestias maiores accusamus suscipit saepe at id consequuntur
-              error atque, eligendi culpa.
+              Please complete this form accurately and attach the required documents. For assistance, contact the admissions office. Thank you for choosing RTC KorPhil Davao!
             </p>
             <div class="frontContent">
               <div class="formImg">
@@ -286,10 +283,7 @@
               </div>
               <div class="txt">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolore perferendis ratione porro similique animi adipisci
-                  dolor deleniti numquam facilis consectetur! Aut quis laborum
-                  aperiam. Magni nisi reiciendis voluptatum dolorem ipsa.
+                  This is the <b>Front Page</b> of the form where you must provide your personal details, including your name, address, contact information, and educational background. Please fill out all fields accurately and completely to ensure proper registration and processing.
                 </p>
               </div>
             </div>
@@ -306,14 +300,53 @@
               </div>
               <div class="txt">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolore perferendis ratione porro similique animi adipisci
-                  dolor deleniti numquam facilis consectetur! Aut quis laborum
-                  aperiam. Magni nisi reiciendis voluptatum dolorem ipsa.
+                  <b>Back Page</b> includes details such as scholarship information, disability classification (if applicable), and a privacy disclaimer. Please review and complete all sections carefully. Your signature at the bottom certifies that the information provided is true and correct.
                 </p>
               </div>
             </div>
           </div>
+          <div class="formParts">
+            <div class="parts">
+              <img src="./assets/images/form/parts/manpower.png" alt="">
+              <h1>Manpower Profile</h1>
+              <p>Please complete the <b>Manpower Profile</b> section with your full name (Last Name, First Name, Middle Name) and other required details. Ensure all information is accurate and up-to-date.
+                <br>
+                <b>Note:</b> The <b></b>Unique Learner Identifier (ULI) Number </b>is only for returning students. If you are a new student enrolling for the first time, leave this blank as the Training Department will provide your ULI.</p>
+
+              <p class="cebuano">Palihug kumpletoha ang <b>Manpower Profile</b> section uban ang imong bug-os nga ngalan (Apelyido, Pangalan, Middle Name) ug ubang gikinahanglan nga detalye. Siguruha nga tanan nga impormasyon tukma ug bag-o.
+                <br>
+                <b>Pahibalo:</b> Ang <b></b>Unique Learner Identifier (ULI) Number </b>para lamang sa mga balik-eskwela. Kung bag-o ka nga estudyante ug nagpa-enroll sa una nga higayon, ayaw kini pagsulati kay ang Training Department ang mohatag niini.</p>
+            </div>
+            <div class="parts">
+              <img src="./assets/images/form/parts/personal info.png" alt="">
+              <h1>Personal Information</h1>
+              <p>This section requires your personal details, including sex, civil status, employment status (before training), birthdate, birthplace, and educational attainment. Additionally, provide the name, address, and contact number of your emergency contact person. Ensure all information is accurate and complete, as it will be used for your training records and emergency purposes.</p>
+
+              <p class="cebuano">Kini nga seksyon nagkinahanglan sa imong personal nga detalye, lakip na ang sekso, estado sibil, estado sa trabaho (sa wala pa ang pagbansay), adlawng natawhan, lugar nga natawhan, ug natapos nga edukasyon. Dugang pa, ihatag ang ngalan, address, ug kontak numero sa imong emergency contact person. Siguruha nga tanan nga impormasyon tukma ug kompleto, kay kini gamiton alang sa imong training records ug emergency nga mga katuyuan.</p>
+            </div>
+            <div class="parts">
+              <img src="./assets/images/form/parts/client class.png" alt="">
+              <h1>LEARNER/TRAINEE/STUDENT CLASSIFICATION</h1>
+              <p>This section identifies your classification as a learner/trainee/student. Please check the appropriate box that applies to you (e.g., 4Ps Beneficiary, Displaced Worker, Out-of-School Youth, etc.). If you have a disability, the TESDA personnel will assist in filling out the related details. Your response helps us tailor our programs to better serve your needs.</p>
+
+              <p class="cebuano">Ang seksyon kini magtudlo sa imong klasipikasyon ingon usa ka magtutudlo/trainee/estudyante. Palihug pag-check sa angay nga kahon nga magamit nimo (pananglitan, 4Ps Beneficiary, Displaced Worker, Out-of-School Youth, ug uban pa). Kung ikaw adunay kapansanan, ang mga personnel sa TESDA magtabang sa pagpuno sa mga may kalabutan nga detalye. Ang imong tubag makatabang kanamo sa paghatag og mas angay nga programa nga magserbisyo sa imong mga panginahanglan.</p>
+            </div>
+            <div class="parts">
+              <img src="./assets/images/form/parts/health.png" alt="">
+              <h1>ADDITIONAL INFORMATION</h1>
+              <p>This section includes details about your disability (if applicable), scholarship package (if you are a scholar), and a privacy disclaimer. Please review the privacy statement and indicate your agreement or disagreement. Your signature at the bottom certifies that all information provided is true and correct. Attach a recent ID picture (taken within the last 6 months) to complete your application.</p>
+
+              <p class="cebuano">Ang seksyon kini naglakip sa mga detalye bahin sa imong kapansanan (kung adunay), scholarship package (kung ikaw usa ka iskolar), ug usa ka privacy disclaimer. Palihug basaha ang privacy statement ug ipakita ang imong pagsugot o pagkontra. Ang imong pirma sa ubos magpamatood nga ang tanang impormasyon nga giprovide kay tinuod ug husto. Idugtong ang usa ka bag-ong ID picture (nga kuha sa sulod sa miaging 6 ka buwan) aron makompleto ang imong aplikasyon.</p>
+            </div>
+            <div class="parts">
+              <img src="./assets/images/form/parts/Applicant Sign.png" alt="">
+              <h1>PRIVACY DISCLAIMER AND CERTIFICATION</h1>
+              <p>By signing below, you agree to allow TESDA to use your contact details and other provided information for processing your scholarship application, employment opportunities, and program surveys. Please ensure all information is accurate and complete. Attach a recent ID picture (taken within the last 6 months) and provide your signature to certify that the details above are true and correct.</p>
+
+              <p class="cebuano">Pinaagi sa pagpirma sa ubos, mouyon ka nga tugutan ang TESDA sa paggamit sa imong contact details ug uban pang impormasyon nga giprovide alang sa pagproseso sa imong aplikasyon sa scholarship, mga oportunidad sa trabaho, ug mga survey sa programa. Palihug siguroa nga ang tanang impormasyon kay husto ug kompleto. Idugtong ang usa ka bag-ong ID picture (nga kuha sa sulod sa miaging 6 ka buwan) ug ihatag ang imong pirma aron mapamatud-an nga ang mga detalye sa ibabaw kay tinuod ug husto.</p>
+            </div>
+          </div>
+
           <div class="videoTutorial">
             <h1>Step by Step</h1>
             <iframe src="https://youtube.com/embed/dk4YijfVdJQ?autoplay=1">
