--- a/Documentation.html
+++ b/Documentation.html
@@ -568,6 +568,9 @@
         </footer>
           <dialog id="pdfViewer">
             <embed src="assets/Feedback Form (Fillable).pdf" type="">
+              <div class="closebtn">
+                <button  onclick="pdfViewer.close()" >close</button>
+              </div>
             </dialog>
         
       </section>
