--- a/InquiryPage.html
+++ b/InquiryPage.html
@@ -439,8 +439,9 @@
       <div class="playArea">
         <h1>3 year Diploma Courses</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quae
-          nemo culpa labore tenetur et maxime alias vel fugiat, provident,
+          <b>WATCH OUR VIDEO INTRODUCTION!</b>
+          <br>
+          To learn more about RTC TESDA and what we offer, please take a moment to watch our video introduction.
         </p>
         <h3>Introduction</h3>
         <button onclick="VideoPlayer.showModal()">
@@ -453,10 +454,7 @@
       <div class="contentArea">
         <h1>WELCOME</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio cumque
-          commodi eum facilis ipsa consequatur quas quos exercitationem sequi
-          odit esse voluptatibus explicabo, earum veniam obcaecati officia ex
-          atque voluptate?
+          Welcome to the <b>Regional Training Center Korphil Davao!</b> We are committed to providing you with quality technical and vocational training to help you achieve your career goals. Let’s work together to build a brighter future through skills and innovation.
         </p>
       </div>
     </div>
